refactor: 인라인 FQN 제거 및 스트림 수집 방식 통일
MenuService, MenuController, HistoryRepository의 인라인 정규화된 클래스명을
import로 전환하고, PickService의 Collectors.toList()를 .toList()로 통일